Pom file clean up and change to allow the effective pom to be installed.  This will help downstreams project depend on blur artifacts by hadoop version and get correct transitive deps.